Adding properties to run DataServer tests